--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ data/cache/settings/vi_44c9516638480603f2f2eb2fd6226cfd_cee1a2823a09f12a86e1bc23
 data/cache/themes/vi_tivi_contact_cee1a2823a09f12a86e1bc23b2ebe78e.cache
 data/cache/users/vi_groups_list_cee1a2823a09f12a86e1bc23b2ebe78e.cache
 *.cache
+*.cache
