--- a/themes/tivi/config.ini
+++ b/themes/tivi/config.ini
@@ -37,6 +37,10 @@
             <name>HEADER</name>
             <tag>[HEADER]</tag>
         </position>
+	<position>
+            <name>SLIDE</name>
+            <tag>[SLIDE]</tag>
+        </position>
         <position>
             <name>LEFT</name>
             <tag>[LEFT]</tag>
