--- a/themes/tivi/config.ini
+++ b/themes/tivi/config.ini
@@ -85,6 +85,11 @@
             <name>FIX_BANNER_RIGHT</name>
             <tag>[FIX_BANNER_RIGHT]</tag>
         </position>
+        <position>
+            <name>MY_SERVICE</name>
+            <tag>[MY_SERVICE]</tag>
+        </position>
+
     </positions>
     <setlayout>
         <layout>
