--- a/themes/mobile_default/config.ini
+++ b/themes/mobile_default/config.ini
@@ -15,6 +15,10 @@
             <name>MENU SITE</name>
             <tag>[MENU_SITE]</tag>
         </position>
+	<position>
+            <name>SLIDE</name>
+            <tag>[SLIDE]</tag>
+        </position>
 
         <position>
             <name>SOCIAL_ICONS</name>
