--- a/themes/mobile_default/config.ini
+++ b/themes/mobile_default/config.ini
@@ -44,6 +44,12 @@
             <name>FOOTER SITE</name>
             <tag>[FOOTER_SITE]</tag>
         </position>
+	
+	<position>
+            <name>FOOTER</name>
+            <tag>[FOOTER]</tag>
+        </position>
+
 
         <position>
             <name>COMPANY INFO</name>
